具备了状态页面初步展示能力

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>自动付药机系统--河北潮咖医疗科技</title>
   </head>
   <body>
     <noscript>该页面需要JavaScript才能运行,请升级您的浏览器</noscript>
