--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,17 @@
 <html lang="zh">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+<!--    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />-->
+    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>自动付药机系统--河北潮咖医疗科技</title>
+    <title>自动付药机系统管理后台</title>
   </head>
   <body>
     <noscript>该页面需要JavaScript才能运行,请升级您的浏览器</noscript>
